--- a/css/styles.css
+++ b/css/styles.css
@@ -489,7 +489,7 @@ progress {
 
 .lead {
   font-size: 1.25rem;
-  font-weight: 300;
+  font-weight: 500;
 }
 
 .display-1 {
@@ -11589,4 +11589,11 @@ footer.footer .social-link:hover {
 .about img{
   border-radius: 50%;
   border: 5px solid var(--bs-dark);
+  padding: 1px;
+  max-width: inherit;
+  max-height: 400px;
+}
+
+.skills a{
+  color: var(--bs-body-color);
 }
