--- a/css/styles.css
+++ b/css/styles.css
@@ -11597,3 +11597,47 @@ footer.footer .social-link:hover {
 .skills a{
   color: var(--bs-body-color);
 }
+
+.container-iframe{
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.my-badge {
+  background-color: transparent;
+  border: 2px solid var(--bs-blue);
+  border-radius: 5px;
+  color: var(--bs-blue);
+  padding: 4px 8px;
+  margin: 8px 2px;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 2;
+}
+@media (min-width: 992px) {
+  .my-badge {
+    background-color: transparent;
+    border: 2px solid var(--bs-blue);
+    border-radius: 5px;
+    color: var(--bs-blue);
+    padding: 4px 8px;
+    margin: 8px 2px;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 2;
+  }
+}
