--- a/css/styles.css
+++ b/css/styles.css
@@ -11641,3 +11641,22 @@ footer.footer .social-link:hover {
     line-height: 2;
   }
 }
+
+.back-toggle {
+  position: fixed;
+  left: 15px;
+  top: 15px;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  color: #fff;
+  background: rgba(52, 58, 64, 0.5);
+  line-height: 50px;
+  z-index: 999;
+}
+.back-toggle:focus, .back-toggle:hover {
+  color: #fff;
+}
+.back-toggle:hover {
+  background: #343a40;
+}
